--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@
 
 [metadata]
 name = formparse
+version = 0.0.1
 description = Simple library for evaluating mathematical formulas.
 author = Nicklas Bocksberger
 author_email = nicklas@bocksberger.com
