--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,8 @@ jobs:
       run: |
         coverage -m unittest discover tests
         coverage xml
+    - name: Upload code coverage report
+      uses: actions/upload-artifact@v3
       with:
         name: code-coverage-report
         path: coverage.xml
