--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
         python tests/test_formula.py
     - name: Run coverage report
       run: |
-        coverage -m unittest discover tests
+        coverage run -m unittest discover tests
         coverage xml
     - name: Upload code coverage report
       uses: actions/upload-artifact@v3
