--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,8 +33,20 @@ jobs:
       run: |
         coverage run -m unittest discover tests
         coverage xml
-    - name: Upload code coverage report
-      uses: actions/upload-artifact@v3
+    - name: Code Coverage Summary
+      uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        name: code-coverage-report
-        path: coverage.xml
+        filename: coverage.xml
+        badge: true
+        fail_bellow_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '70 90'
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        recreate: true
+        path: code-coverage-results.md
